Scroll loader; gallery backup

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             position: fixed;
             top: 0;
             right: 0;
-            width: 20%;
+            width: 300px;
             max-height: 100%;
             overflow-y: auto;
             border-left: 1px solid #CCC;
@@ -55,8 +55,12 @@
             cursor: default;
             border-radius: 2px;
             margin-top: 2.5%;
+            height: 250px;
+            width: 200px;
+            float: left;
+            overflow: hidden;
             display: inline-block;
-            margin-right: 1.6em;
+            margin-right: 20px;
             border-left: 6px solid #CCC;
             padding: 2px 6px;
             -webkit-box-shadow:0 0 10px 0 rgba(0,0,0,0.2); /* Saf3.0+, Chrome */
@@ -83,15 +87,14 @@
         .menu3-container li a:visited {
             color: #888;
         }
-        .menu3-container li {
-            width: 200px;
-            height: auto;
-        }
         li a:hover {
             text-decoration: underline;
         }
         .value {
             opacity: 0.2;
+        }
+        .author{
+            font-size: 12px;
         }
         .thumbnail {
             /*height: 200px;*/
@@ -204,16 +207,21 @@
         href: function(d, i){return d.url;},
         html: function(d, i){
             var content = d.title;
-            if(d.author) content += '-'+ d.author;
+            if(d.author) content += ' - '+'<span class="author">'+d.author+'</span>';
             if(d.thumbnail) content += "<br /> <img src='"+d.thumbnail+"' class='thumbnail'/><br />";
             return content;}
     };
 
+    var menu3Width = window.innerWidth - 300; // #nav width
+    var numInOneScreen = Math.floor(menu3Width / 220) * Math.ceil(document.height / 250); // menu3 li width
+    var numInView = numInOneScreen;
+
     d3.csv('https://docs.google.com/spreadsheet/pub?key=0AqMEGBUNwXeHdHpQNlVuY29SUE5BSXVtS3JueGlNYVE&single=true&gid=0&output=csv', function(error, _json){
+//    d3.csv('d3gallery_feb282013.csv', function(error, _json){
         json = _json;
         buildList(dataTransformMenu1(), '.menu1-container', data1);
         buildList(dataTransformMenu2('visualizationType'), '.menu2-container', data2);
-        buildList(dataTransformMenu3('title', 'all'), '.menu3-container', data3);
+//        buildList(dataView(dataTransformMenu3('title', 'all'), numInView), '.menu3-container', data3);
         processLocationHash();
     });
 
@@ -257,34 +265,41 @@
         return(uniques);
     }
 
+    var cachedData;
     function dataTransformMenu3(dimension, value){
         var filtered = json.filter(function(d, i){
             var splitted = splitter(d[dimension]);
             if (value == 'all') return true;
             else if(value == 'untagged') return (splitted == '');
+            //TODO: use the grouped data instead
             else if(splitted.indexOf(value) >= 0) return true;
             else return false;
         });
         var sorted = filtered.sort(function(a, b){
                 return (a.thumbnail == '') - (b.thumbnail == '');
             });
+        cachedData = sorted;
         return sorted;
     }
 
+    function dataView(data, num){
+        return data.slice(0, num);
+    }
+
     function buildList(data, containerSelector, content){
+        d3.select(containerSelector).selectAll("li.entry").remove();
+        updateList(data, containerSelector, content);
+    }
+
+    function updateList(data, containerSelector, content){
         var entries = d3.select(containerSelector)
             .selectAll("li.entry")
-            .data(data);
-        entries.enter().append("li")
+            .data(data)
+            .enter().append("li")
             .attr('class', 'entry')
-            .append('a');
-        entries.each(function(d, i){
-            d3.select(this)
-                .select('a')
-                .attr('href', content.href)
-                .html(content.html)
-        });
-        entries.exit().remove();
+            .append('a')
+            .attr('href', content.href)
+            .html(content.html);
     }
 
     d3.select('.menu2-search')
@@ -300,16 +315,27 @@
     }
 
     function processLocationHash(){
+        document.body.scrollTop = document.documentElement.scrollTop = 0;
+        numInView = numInOneScreen;
         if(window.location.hash) {
             var hash = window.location.hash.substring(1);
             var hashSplit = hash.split('=');
             if(hashSplit[1] == 'all') buildList(dataTransformMenu2(hashSplit[0]), '.menu2-container', data2);
-            buildList(dataTransformMenu3(hashSplit[0], hashSplit[1]), '.menu3-container', data3);
+            buildList(dataView(dataTransformMenu3(hashSplit[0], hashSplit[1]), numInView), '.menu3-container', data3);
+        }else{
+            buildList(dataView(dataTransformMenu3('title', 'all'), numInView), '.menu3-container', data3);
         }
     }
 
     d3.select(window).on('hashchange', function () {
         processLocationHash();
+    });
+
+    d3.select(window).on('scroll', function(d, i){
+        if(document.body.scrollTop == document.height -  window.innerHeight){
+            numInView += numInOneScreen;
+            updateList(dataView(cachedData, numInView), '.menu3-container', data3);
+        }
     });
 
 </script>
