notice for the new version

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 </head>
 <body>
-<div class="info">D3.js Gallery | <a class="about-link" href="">About</a></div>
+<div class="info">D3.js Gallery | <a class="about-link" href="">About</a> | <span style="color:red">The next version of this gallery is <a href="http://christopheviau.com/d3list/gallery.html">here</a> with 1900 D3.js examples!</span> </div>
 <div class="about-box">
 
     <div class="about-close" style="cursor: pointer;">x</div>
