gallery data from csv

--- a/gallery.html
+++ b/gallery.html
@@ -90,7 +90,7 @@
     var numInView = numInOneScreen;
 
     // d3.csv('https://docs.google.com/spreadsheet/pub?key=0AqMEGBUNwXeHdHpQNlVuY29SUE5BSXVtS3JueGlNYVE&single=true&gid=0&output=csv', function(error, _json){
-    d3.csv('https://docs.google.com/spreadsheet/pub?key=0AqMEGBUNwXeHdEZOdTRXZFNFSGJDaW1aRFBnLUpCbHc&single=true&gid=0&output=csv', function(error, _json){
+    d3.csv('d3_gallery.csv', function(error, _json){
 //    d3.csv('d3gallery_feb282013.csv', function(error, _json){
         json = _json;
         d3.select('.example-count').text('(' + json.length + 'examples!)');
